fix: change box-container overflow

--- a/css/signup-in/signup-in.css
+++ b/css/signup-in/signup-in.css
@@ -11,6 +11,7 @@
     width: 320px;
     background-color: rgb(134, 67, 220, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
 }
 
 .upper-btn{
